# SearchSECOParser

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Parser.sln  README.md  SearchSECOParser.sln
.github/workflows/: testing.yml
Parser/: AbstractSyntaxToHashable.cpp  AbstractSyntaxToHashable.h  CMakeLists.txt  HashData.h  Logger.cpp  Logger.h  Main.cpp  Node.cpp  Node.h  Parser.cpp  Parser.h  Parser.vcxproj  Parser.vcxproj.filters  SrcMLCaller.cpp  SrcMLCaller.h  StringStream.cpp  StringStream.h  Tag.cpp  Tag.h  XmlParser.cpp  XmlParser.h  antlrParser.cpp  antlrParser.h  md5.cpp
Parser/languages/: LanguageBase.h
Parser/languages/c/: C.g4  CAntlrImplementation.h  CParserListenerCustom.cpp  CParserListenerCustom.h
Parser/languages/cpp/: CPP14AntlrImplemenation.h  CPP14AntlrImplementation.h  CPP14Parser.g4  CPP14ParserListenerCustom.cpp  CPP14ParserListenerCustom.h
Parser/languages/js/: JavaScriptAntlrImplementation.h  JavaScriptLexer.g4  JavaScriptParser.g4  JavaScriptParserListenerCustom.cpp  JavaScriptParserListenerCustom.h
Parser/languages/py3/: Python3.g4  Python3AntlrImplemenation.h  Python3AntlrImplementation.h  Python3ParserListenerCustom.cpp  Python3ParserListenerCustom.h
Parser/loguru/: loguru.hpp
Parser/md5/: md5.cpp
Parser_Test/: AbstractSyntaxToHashable_test.cpp  CMakeLists.txt  Parser_Test.vcxproj  Parser_Test.vcxproj.filters  StringStreamMock.h  StringStream_test.cpp  Tag_test.cpp  XmlParser_test.cpp  resource.h  test.cpp
Parser_Test/.opencppcov/Parser_Test/: Debug_x64.json
Parser_Test/Integration/: CMakeLists.txt  integration_test.cpp
Parser_Test/Integration/data/csharp/: Mandelbrot.cs  game.cs
Parser_Test/Integration/data/javascript/: nested.js
Parser_Test/Integration/data/python3/: tool.py
SearchSECOParser/: CMakeLists.txt  Main.cpp
StandAlone/: CMakeLists.txt  StandAlone.vcxproj  StandAlone.vcxproj.filters
antlr/lib/debug/: antlr4-runtime.exp  antlr4-runtime.lib
antlr/lib/release/: antlr4-runtime.lib
libSearchSECOParser/: AbstractSyntaxToHashable.cpp  AbstractSyntaxToHashable.h  AntlrParser.cpp  AntlrParser.h  CMakeLists.txt  HashData.h  Logger.cpp  Logger.h  Node.cpp  Node.h  Parser.cpp  Parser.h  SrcMLCaller.cpp  SrcMLCaller.h  StringStream.cpp  StringStream.h  Tag.cpp  Tag.h  XmlParser.cpp  XmlParser.h  antlrParser.cpp  antlrParser.h
libSearchSECOParser/languages/: LanguageBase.h
libSearchSECOParser/languages/js/: JavaScriptAntlrImplementation.cpp  JavaScriptAntlrImplementation.h  JavaScriptParser.g4  JavaScriptParserListenerCustom.cpp  JavaScriptParserListenerCustom.h
libSearchSECOParser/languages/py3/: Python3AntlrImplementation.cpp  Python3AntlrImplementation.h  Python3ParserListenerCustom.cpp  Python3ParserListenerCustom.h
tests/: AbstractSyntaxToHashable_test.cpp  CMakeLists.txt  StringStreamMock.h  StringStream_test.cpp  Tag_test.cpp  XmlParser_test.cpp
tests/Integration/: CMakeLists.txt  integration_test.cpp
tests/Integration/data/python3/: hash_table.py
vs-projects/: libSearchSECOParser.vcxproj  libSearchSECOParser.vcxproj.filters  tests.vcxproj
vsProjects/: SearchSECOParser.vcxproj  SearchSECOParser.vcxproj.filters  libSearchSECOParser.vcxproj  libSearchSECOParser.vcxproj.filters  tests.vcxproj  tests.vcxproj.filters
